Actualizacion, querys innecesarias borradas
