# source/back-end/controller.js
@@ -84,47 +84,6 @@ const flights_origin_dest = async (req, res) => {
 
 
 
-
-
-const flights_by_departure_date = async (req, res) => {
-    /*swagger.responses[200] = {
-        "description": "OK",
-        "content": {
-          "application/json": {
-            "schema": {
-                "type" : "object",
-                "properties" : {
-                    "result" : {
-                        "type": "array",
-                        "items": {
-                          "$ref": "#/components/schemas/flights"
-                        }
-                    }
-                }
-            }
-          }
-        }
-    } 
-    */  
-    const { departureDate } = req.query;
-
-  try {
-    const flights = await Flights.find({
-      DEPARTURE_DATE: 
-        new Date(departureDate) 
-      ,
-    });
-
-    res.json({ result: flights });
-  } catch (error) {
-    res.status(500).json({ status: 'Error interno del servidor' });
-  }
-};
-
-
-
-
-
 const flights_by_dDate_airline_origin_dest = async (req, res) => {
     /*swagger.responses[200] = {
         "description": "OK",
@@ -177,55 +136,7 @@ const flights_by_dDate_airline_origin_dest = async (req, res) => {
 
 
 
-
-const flights_by_dDate_airline = async (req, res) => {
-    /*swagger.responses[200] = {
-        "description": "OK",
-        "content": {
-          "application/json": {
-            "schema": {
-                "type" : "object",
-                "properties" : {
-                    "result" : {
-                        "type": "array",
-                        "items": {
-                          "$ref": "#/components/schemas/flights"
-                        }
-                    }
-                }
-            }
-          }
-        }
-    } 
-    */  
-    const { departureDate, airline} = req.query;
-
-  try {
-    const flights = await Flights.find({
-      $and: [
-        {
-          DEPARTURE_DATE: 
-             new Date(departureDate),
-          
-        },
-        {
-          AIRLINE: airline, // Filtrar vuelos por aerolínea
-        },
-      ],
-    });
-
-    res.json({ result: flights });
-  } catch (error) {
-    res.status(500).json({ status: 'Error interno del servidor' });
-  }
-};
-
-
-
-
-
-
-const flights_by_dDate_origin_dest = async (req, res) => {
+const flight_by_id = async (req, res) => {
     /*swagger.responses[200] = {
         "description": "OK",
         "content": {
@@ -244,41 +155,7 @@ const flights_by_dDate_origin_dest = async (req, res) => {
           }
         }
     } 
-    */  
-    const { departureDate,originAirport, destinationAirport } = req.query;
-
-  try {
-    const flights = await Flights.find({
-      $and: [
-        {
-          DEPARTURE_DATE: 
-           Date(departureDate), // Filtrar vuelos con fecha de salida igual o posterior
-          
-        },
-        
-
-        {
-          ORIGIN_AIRPORT: originAirport, // Filtrar vuelos por aeropuerto de origen
-        },
-        {
-          DESTINATION_AIRPORT: destinationAirport, // Filtrar vuelos por aeropuerto de destino
-        },
-      ],
-    });
-
-    res.json({ result: flights });
-  } catch (error) {
-    res.status(500).json({ status: 'Error interno del servidor' });
-  }
-};
-
-
-
-
-
-
-const flight_by_id = async (req, res) => {
-
+    */ 
   try {
     const{id} = req.query;
     const flight = await Flights.findById(id);
@@ -301,6 +178,6 @@ const flight_by_id = async (req, res) => {
 
 
 module.exports = {
-  airlines,flights_origin_dest,flights_by_departure_date,flights_by_dDate_airline_origin_dest,flights_by_dDate_airline,flights_by_dDate_origin_dest,flight_by_id
+  airlines,flights_origin_dest,flights_by_dDate_airline_origin_dest,flight_by_id
 };
 
